# jul24bmlops_plant

./: .env  .gitignore  Dockerfile.API  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-app.yml
API/: db_dump.sql
API/app/: __init__.py  main.py  test_script.py
API/app/auth/: auth_utils.py  authentication.py
api_auth/: .env  Dockerfile  README.md  requirements.txt
api_auth/app/: config.py  main.py
api_auth/tests/: conftest.py  test_api_request_log.py  test_auth.py  test_error_log.py  test_users.py
api_db/: Dockerfile  centralised_db_management.yml  micro_service_architecture.yml  requirements.txt
api_db/app/: config.py  main.py
api_mlflow/: .gitignore  Dockerfile  Dockerfile.old  README.md  docker-compose.yml  pyproject.toml  retrain.sh  train.sh
api_mlflow/model/: app.py  mlflow_train.py  train_model.py
api_mlflow/test/: test_train_pr.py
api_prediction/: Dockerfile  README.md  requirements.txt
api_prediction/app/: config.py  main.py
api_prediction/tests/: conftest.py  test_pediction.py
api_training/: Dockerfile  requirements.txt
api_training/app/: main.py
db/: postmaster.pid
db/base/1/: 2619  (+3 more)
db/global/: 1260  pg_control  pg_internal.init
db/pg_xact/: 0000
db_data/global/: 1260  pg_control  pg_internal.init
db_data/pg_stat/: pgstat.stat
db_raw/global/: 1260  pg_control  pg_internal.init
db_raw/pg_stat/: pgstat.stat
db_raw/pg_xact/: 0000
mlflow/: Dockerfile  Dockerfile.new  Dockerfile.orig  pyproject copy.toml  pyproject.toml
mlflow/model/: app.py  mlflow_train.py  mlflow_utils.py  predict_model.py  train_model.py  train_model_alex.py
mlflow/src/: mlflow_train.py  predict_model.py  train_model.py
mlflow/test/: test_train_pr.py
src/fastapi/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
src/mlflow/: mlflow_train.py  mlflow_utils.py
src/models/: mlflow_train.py  predict_model.py  retrain_decider.py  retrain_model.py  train_model.py  utils.py
test/database/: test_database.py
test/endpoints/: test_endpoints.py
test/model/: test_train_pr.py
(+272 files in other folders)
