[tool.poetry]
name = "mlops-pr"
version = "0.1.0"
description = "MLOps for Plant recognition"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
tensorflow = "^2.17.0"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings"
testpaths = [
    "test"
]
pythonpath = [
    "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
