[tool.poetry]
name = "mlops-pr"
version = "0.1.0"
description = "MLOps for Plant recognition"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
tensorflow = "^2.17.0"
scikit-learn = "^1.5.1"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings"
testpaths = [
    "test"
]
pythonpath = [
    "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
