[tool.poetry]
name = "pr_model"
version = "0.1.0"
description = "MLOps for Plant recognition"
authors = ["AlArLu"]
readme = "README.md"
packages = [
    { include = "model", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
tensorflow = "^2.17.0"
scikit-learn = "^1.5.1"
mlflow = "^2.6.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.0"

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings"
testpaths = [
    "test"
]
pythonpath = [
    "model"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
